--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.5",
+    "reactstrap": "^9.1.1",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
