--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.3",
     "formik": "^2.2.9",
+    "framer-motion": "^6.3.15",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
